--- a/style.css
+++ b/style.css
@@ -82,3 +82,21 @@ canvas {
     border-radius: 5px;
     color: #1a1a2e;
 }
+
+#star-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.star {
+    position: absolute;
+    background: white;
+    border-radius: 50%;
+    opacity: 0.8;
+}
